--- a/Notes/app/src/main/res/drawable/note_background_shape.xml
+++ b/Notes/app/src/main/res/drawable/note_background_shape.xml
@@ -2,9 +2,10 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:startColor="#eeeeee"
-        android:endColor="#eeeeee"/>
+
+    <solid
+        android:color="#eeeeee"/>
+
     <corners
-        android:radius="8dp"/>
+        android:radius="8dp" />
 </shape>
